epserde/tests/fail/full_copy_const.stderr
error: full_copy expects a type parameter, but `N` is a const parameter
  --> tests/fail/full_copy_const.rs:13:21
   |
13 | #[epserde(full_copy(N))]
   |                     ^
